@@ -11,8 +11,8 @@ DIST avahi-0.6.28.tar.gz 1238660 RMD160 d61b370baa3f25d57efba43f2c34b54cab7e7e9e
 EBUILD avahi-0.6.24-r2.ebuild 5400 RMD160 f955a49312b3d0b269e08358c1dce3a6ad00f037 SHA1 12f531483b56407b83be6ed2639d79f671c23226 SHA256 8ea2e741aea77123d87ba83f71cdebde92886e8716554916b87a9a79bd67d018
 EBUILD avahi-0.6.25-r1.ebuild 5001 RMD160 a3630d681a75bbb9bb12c2ef86d213750eec6a4a SHA1 3553b0e5b285db42dd303da6459924d2974206e2 SHA256 58cfcd047f3afb58134f851215ebe7e789c2e164874396b65173d9970b7f960a
 EBUILD avahi-0.6.25.ebuild 5352 RMD160 0fb9fe844fba482fbfc95caf8744b71539c55324 SHA1 353f53cbbf73ed27c5b85629fd2e09374f08a251 SHA256 854cb5b236f3109a227970a9aa99904c1f947680a8bef1345c3e98bdc89d0efa
-EBUILD avahi-0.6.27-r1.ebuild 4936 RMD160 3003c3df83b4454863f0cb15259fd4e38c2a79d7 SHA1 7d17c3bf220c9c8a9f445fb17d73e4a9afdb8864 SHA256 a5260698cfca38d54d53f1bd93be28316bc189cf6f18c38e9a6798cee762b966
-EBUILD avahi-0.6.27.ebuild 4679 RMD160 8ea7c8f93c28455161164f508b6ee46532fb1e23 SHA1 b74b902c640695c5cb73e2f75a23b6c07bef08bb SHA256 75995b26ecbcbb4d6d4a42882034acebd44f932bd8d0d9db3e149989aac07d21
-EBUILD avahi-0.6.28.ebuild 4813 RMD160 7bd62d5b592e487c6179db1e3427e7656142ebf6 SHA1 a0833b09ee31514f68f9d6623eb140cb4d44a8b4 SHA256 ee309b9fb0c4dc1deaac4b0bab64d357650c19da28051dbd23958c324b18d8a7
-MISC ChangeLog 28142 RMD160 4e1eef4161f46daeaa6a6206ca6796c86392f890 SHA1 6aa50a1ea11bbc0a5109dba57972871a5b97e9fd SHA256 fae8aeeb1727cc2fcc4b04eda86e66e9a9cec51004b00b4d027ccc0f35d7165c
+EBUILD avahi-0.6.27-r1.ebuild 4903 RMD160 00dafea3f3a4ae4281e573a23f7f4ec9bb130eef SHA1 dd637d5b1207bdf455064009647697775752bba7 SHA256 64e24c62269015042226b6bc801852c4576eda04cde4c2b7e59421291d0358ba
+EBUILD avahi-0.6.27.ebuild 4650 RMD160 93703638ec59e9da63b6ba2bd058b94964ac69e4 SHA1 40c43baf69299bad27812f2ab6859da444d8e7d7 SHA256 cc53a733743c9274e846aa6c255bd085c5b612405ae4f73dea147df7380279b7
+EBUILD avahi-0.6.28.ebuild 4783 RMD160 bff589f583c972e493257c9472f7e4f2d562850e SHA1 8879429e6c1ce92eab80c3c250c959de09b2aa83 SHA256 e26a9838720beb28e26cc7ec78e0de1568f95483c45a5415f3badf81c9d1d725
+MISC ChangeLog 28322 RMD160 a4d40e707ed13ccd407987eb02142726672865f2 SHA1 3e2d47981a67dabd89a769179b824cd8507ef1e1 SHA256 0f38c33c391b245cbb8a628f4bb0481f036625cae5c7a1f1472562f04310d365
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
