@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.189 2010/11/20 00:50:07 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.190 2010/12/14 00:27:52 swegener Exp $
+
+  14 Dec 2010; Sven Wegener <swegener@gentoo.org> avahi-0.6.27.ebuild,
+  avahi-0.6.27-r1.ebuild, avahi-0.6.28.ebuild:
+  Drop glade dependency and bump gtk+ to 2.14.0, bug #348394.
 
   20 Nov 2010; Diego E. Pettenò <flameeyes@gentoo.org> avahi-0.6.28.ebuild:
   Fix obvious typo.
